// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandFilter Component Rendering renders different states correctly: all-selected 1`] = `
<div>
  <div
    class="sc-kpOvIu dzcghV"
  >
    <h2
      class="sc-fYsHOw gpnbOD"
    >
      Brands
    </h2>
    <div
      class="sc-icnseD fNZWKN"
    >
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="true"
          class="sc-cXawGu VtGFV"
          data-state="checked"
          id="brand-0"
          role="checkbox"
          type="button"
          value="on"
        >
          <span
            class="sc-jJAtPt dVvwCd"
            data-state="checked"
            style="pointer-events: none;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="padding-top: 5px;"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </button>
        <label
          class="sc-cUiCeM limFCd"
          for="brand-0"
        >
          United Farms
        </label>
      </div>
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="true"
          class="sc-cXawGu VtGFV"
          data-state="checked"
          id="brand-1"
          role="checkbox"
          type="button"
          value="on"
        >
          <span
            class="sc-jJAtPt dVvwCd"
            data-state="checked"
            style="pointer-events: none;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="padding-top: 5px;"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </button>
        <label
          class="sc-cUiCeM limFCd"
          for="brand-1"
        >
          Organic Farms
        </label>
      </div>
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="true"
          class="sc-cXawGu VtGFV"
          data-state="checked"
          id="brand-2"
          role="checkbox"
          type="button"
          value="on"
        >
          <span
            class="sc-jJAtPt dVvwCd"
            data-state="checked"
            style="pointer-events: none;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="padding-top: 5px;"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </button>
        <label
          class="sc-cUiCeM limFCd"
          for="brand-2"
        >
          Fresh Fields
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`BrandFilter Component Rendering renders different states correctly: empty-brands 1`] = `<div />`;

exports[`BrandFilter Component Rendering renders different states correctly: mixed-selections 1`] = `
<div>
  <div
    class="sc-kpOvIu dzcghV"
  >
    <h2
      class="sc-fYsHOw gpnbOD"
    >
      Brands
    </h2>
    <div
      class="sc-icnseD fNZWKN"
    >
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="false"
          class="sc-cXawGu VtGFV"
          data-state="unchecked"
          id="brand-0"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="sc-cUiCeM limFCd"
          for="brand-0"
        >
          United Farms
        </label>
      </div>
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="true"
          class="sc-cXawGu VtGFV"
          data-state="checked"
          id="brand-1"
          role="checkbox"
          type="button"
          value="on"
        >
          <span
            class="sc-jJAtPt dVvwCd"
            data-state="checked"
            style="pointer-events: none;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="padding-top: 5px;"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </button>
        <label
          class="sc-cUiCeM limFCd"
          for="brand-1"
        >
          Organic Farms
        </label>
      </div>
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="false"
          class="sc-cXawGu VtGFV"
          data-state="unchecked"
          id="brand-2"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="sc-cUiCeM limFCd"
          for="brand-2"
        >
          Fresh Fields
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`BrandFilter Component Rendering renders different states correctly: none-selected 1`] = `
<div>
  <div
    class="sc-kpOvIu dzcghV"
  >
    <h2
      class="sc-fYsHOw gpnbOD"
    >
      Brands
    </h2>
    <div
      class="sc-icnseD fNZWKN"
    >
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="false"
          class="sc-cXawGu VtGFV"
          data-state="unchecked"
          id="brand-0"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="sc-cUiCeM limFCd"
          for="brand-0"
        >
          United Farms
        </label>
      </div>
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="false"
          class="sc-cXawGu VtGFV"
          data-state="unchecked"
          id="brand-1"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="sc-cUiCeM limFCd"
          for="brand-1"
        >
          Organic Farms
        </label>
      </div>
      <div
        class="sc-jMsorb cyLRQD"
      >
        <button
          aria-checked="false"
          class="sc-cXawGu VtGFV"
          data-state="unchecked"
          id="brand-2"
          role="checkbox"
          type="button"
          value="on"
        />
        <label
          class="sc-cUiCeM limFCd"
          for="brand-2"
        >
          Fresh Fields
        </label>
      </div>
    </div>
  </div>
</div>
`;
